integration/tests/error_assert_decompress.err
error: Decompression Error
  --> tests/error_assert_decompress.hurl:3:1
   |
 3 | ```Hello World!```
   | ^ Could not uncompress response with gzip
   |

