integration/tests/error_assert_decompress.hurl
GET http://localhost:8000/error-assert-decompress
HTTP/1.0 200
```Hello World!```

